# fitness_recommender

./: README.md  fitness_tracker_requirements.md
fitness-tracker/: README.md  start_app.ps1
fitness-tracker/backend/: .env  .gitignore  fitness_tracker.db  pyproject.toml
fitness-tracker/backend/app/: config.py  database.py  main.py
fitness-tracker/backend/app/models/: ai.py  goal.py  user.py  workout.py
fitness-tracker/backend/app/routes/: ai_coach.py  auth.py  deps.py  users.py  workouts.py
fitness-tracker/backend/app/schemas/: ai.py  goal.py  user.py  workout.py
fitness-tracker/backend/app/services/: ai_service.py  auth_service.py
fitness-tracker/frontend/: package-lock.json  package.json
fitness-tracker/frontend/src/: App.jsx
fitness-tracker/frontend/src/api/: axiosInstance.js
fitness-tracker/frontend/src/context/: AuthContext.jsx
fitness-tracker/frontend/src/pages/: AICoachPage.jsx  DashboardPage.jsx  LandingPage.jsx  LogWorkoutPage.jsx  LoginPage.jsx  OnboardingPage.jsx  ProfilePage.jsx  (+2 more)
stitch_fitcoach_ai_fitness_platform_figma/ai_coach/: code.html
stitch_fitcoach_ai_fitness_platform_figma/dashboard/: code.html
stitch_fitcoach_ai_fitness_platform_figma/kinetic_high_performance/: DESIGN.md
stitch_fitcoach_ai_fitness_platform_figma/landing_page/: code.html
stitch_fitcoach_ai_fitness_platform_figma/log_workout/: code.html
stitch_fitcoach_ai_fitness_platform_figma/login_register/: code.html
stitch_fitcoach_ai_fitness_platform_figma/onboarding_goals/: code.html
stitch_fitcoach_ai_fitness_platform_figma/progress_history/: code.html
(+1 files in other folders)
